test/errors/293-fatalerror/654.tex
% tex -interaction=nonstopmode
%% 654 => "*** (cannot \read from terminal in nonstop modes)"

\read0

%> *** (cannot \read from terminal in nonstop modes)